// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dashboard admission confirm expired 1`] = `
<div
  className="dashboard"
>
  <div
    className="stripe accent-blue"
  />
  <div
    className="stripe accent-orange bottom"
  />
  <div
    className="floating-illustration drone"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="floating-illustration relax"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="treehacks-dashboard-message-container"
  >
    <div
      className="dashboard-design"
    >
      <Component />
    </div>
  </div>
</div>
`;

exports[`dashboard admission confirmed 1`] = `
<div
  className="dashboard"
>
  <div
    className="stripe accent-blue"
  />
  <div
    className="stripe accent-orange bottom"
  />
  <div
    className="floating-illustration drone"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="floating-illustration relax"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="treehacks-dashboard-message-container"
  >
    <div
      className="dashboard-design notice"
    >
      Time to hack! Looking to 
      <Link
        replace={false}
        to="/rooms"
      >
        reserve a room
      </Link>
       for your team?
    </div>
    <div
      className="dashboard-design"
    >
      <Connect(Component)
        confirmedYet={true}
      />
    </div>
  </div>
</div>
`;

exports[`dashboard admission declined 1`] = `
<div
  className="dashboard"
>
  <div
    className="stripe accent-blue"
  />
  <div
    className="stripe accent-orange bottom"
  />
  <div
    className="floating-illustration drone"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="floating-illustration relax"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="treehacks-dashboard-message-container"
  >
    <div
      className="dashboard-design"
    >
      <Component />
    </div>
  </div>
</div>
`;

exports[`dashboard admitted 1`] = `
<div
  className="dashboard"
>
  <div
    className="stripe accent-blue"
  />
  <div
    className="stripe accent-orange bottom"
  />
  <div
    className="floating-illustration drone"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="floating-illustration relax"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="treehacks-dashboard-message-container"
  >
    <div
      className="dashboard-design"
    >
      <Connect(Component)
        confirmedYet={false}
        deadline="2048-01-30T04:39:47.512Z"
      />
    </div>
  </div>
</div>
`;

exports[`dashboard incomplete after deadline 1`] = `
<div
  className="dashboard"
>
  <div
    className="stripe accent-blue"
  />
  <div
    className="stripe accent-orange bottom"
  />
  <div
    className="floating-illustration drone"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="floating-illustration relax"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="treehacks-dashboard-message-container"
  >
    <div
      className="dashboard-design"
    >
      <span>
        Sorry, the application window has closed.
      </span>
    </div>
  </div>
</div>
`;

exports[`dashboard incomplete before deadline 1`] = `
<div
  className="dashboard"
>
  <div
    className="stripe accent-blue"
  />
  <div
    className="stripe accent-orange bottom"
  />
  <div
    className="floating-illustration drone"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="floating-illustration relax"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="treehacks-dashboard-message-container"
  >
    <div
      className="dashboard-design"
    >
      <div>
        <div>
          You haven't submitted your 
          <Link
            replace={false}
            to="/application_info"
          >
            application
          </Link>
           yet. You have
        </div>
        <div
          className="days-left"
        >
          7627
        </div>
        <div>
          days to submit your application before the deadline:
          <br />
          <strong>
            November 18, 2019
          </strong>
          .
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`dashboard rejected 1`] = `
<div
  className="dashboard"
>
  <div
    className="stripe accent-blue"
  />
  <div
    className="stripe accent-orange bottom"
  />
  <div
    className="floating-illustration drone"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="floating-illustration relax"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="treehacks-dashboard-message-container"
  >
    <div
      className="dashboard-design"
    >
      <Component />
    </div>
  </div>
</div>
`;

exports[`dashboard submitted 1`] = `
<div
  class="dashboard"
>
  <div
    class="stripe accent-blue"
  />
  <div
    class="stripe accent-orange bottom"
  />
  <div
    class="floating-illustration drone"
  >
    <img />
  </div>
  <div
    class="floating-illustration relax"
  >
    <img />
  </div>
  <div
    class="treehacks-dashboard-message-container"
  >
    <div
      class="dashboard-design"
    >
      <span>
        Your application has been received – you are all good for now!
        <br />
        <br />
        We will email you when decisions are released and will handle any travel questions at that time. Thanks for applying :)
      </span>
    </div>
  </div>
</div>
`;

exports[`dashboard waitlisted 1`] = `
<div
  className="dashboard"
>
  <div
    className="stripe accent-blue"
  />
  <div
    className="stripe accent-orange bottom"
  />
  <div
    className="floating-illustration drone"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="floating-illustration relax"
  >
    <img
      src={[Function]}
    />
  </div>
  <div
    className="treehacks-dashboard-message-container"
  >
    <div
      className="dashboard-design"
    >
      <Component />
    </div>
  </div>
</div>
`;
